--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,3 +1,15 @@
-body {
-    background-color: pink;
+
+
+@import './icon.less';
+
+.app-nav-bar {
+    background-color: #3296fa !important;
+    .van-nav-bar__title {
+        color: #fff;
+       
+    }
+    .van-icon {
+        color: #fff !important;
+
+    }
 }
