--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -99,6 +99,10 @@
 .iconmap-filling:before {
   content: "\e68c";
 }
+html {
+  touch-action: none;
+  touch-action: pan-y;
+}
 .app-nav-bar {
   background-color: #3296fa !important;
 }
