--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,7 +1,12 @@
 
 
 @import './icon.less';
-
+html{
+    touch-action:none;
+    
+    touch-action:pan-y;
+    
+    }
 .app-nav-bar {
     background-color: #3296fa !important;
     .van-nav-bar__title {
